# rocket-ensemble

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs  migrations.rs  models.rs
templates/: base.html.tera
templates/posts/: index.html.tera  show.html.tera
