[package]
name = "rocket-ensemble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ensemble = { version = "0.0.5", features = ["postgres"] }
futures = "0.3.29"
rocket = { version = "0.5.0", features = ["json"] }
macros = { path = "./macros" }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
